<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/registerTitle"
            android:textColor="@color/purple_500"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="-7dp" />

        <LinearLayout
            android:layout_width="306dp"
            android:layout_height="513dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:id="@+id/lblFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@id/txtEmail"
                android:text="@string/lblFullname"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtFullnameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@id/txtEmail"
                android:text="@string/lblEmail"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@id/txtPasswordRegister"
                android:text="@string/lblPassword"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/lblDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@id/txtPasswordRegister"
                android:text="@string/lblDob"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="Select Date"
                android:textSize="20sp"
                tools:ignore="Autofill,TextFields" />

            <TextView
                android:id="@+id/lblSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@id/txtPasswordRegister"
                android:text="@string/lblSex"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginBottom="10dp">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"/>

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />
            </RadioGroup>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/purple_500"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/registerBtn"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/hyperLinkRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hyperLinkRegister"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="18sp" />


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>